# food-diary

./: .env.example  .gitignore  Procfile  README.md  docker-compose.test.yml
docs/: mcp-connector.md
food-diary/: ContentView.swift  food_diaryApp.swift
food-diary.xcodeproj/: project.pbxproj
food-diaryTests/: food_diaryTests.swift
food-diaryUITests/: food_diaryUITests.swift  (+1 more)
ios/: .gitignore  (+2 more)
llm-nutrition-api/: .containerignore  Cargo.toml  Containerfile  README.md  build.zig  build.zig.zon  download_model.sh  test_cases.csv
llm-nutrition-api/eval/: dataset.json  run_evals.py
llm-nutrition-api/eval/results/: 2026-05-10.json  2026-05-10.md  2026-05-11.json  2026-05-11.md  2026-07-23.json  2026-07-23.md
llm-nutrition-api/eval/results/gemini-2.5-flash/: 2026-05-25.json  2026-05-25.md  gitops-prompt.md
llm-nutrition-api/eval/results/q4_k_m/: 2026-05-14.json  2026-05-14.md
llm-nutrition-api/eval/results/q5_k_m/: 2026-05-13.json  2026-05-13.md
llm-nutrition-api/src/: agent.rs  auth.rs  auth.zig  env.zig  main.rs  main.zig  openrouter.zig  root.zig  tools.rs  vlm.zig  vlm_benchmark_api.zig
llm-nutrition-api/src/llm/: agent.zig  http.zig  tools.zig
llm-nutrition-api/src/llm/testdata/: ddg_bot_challenge_response.html
nutrition-fact-labeller/: .gitignore  Cargo.toml  Containerfile  README.md  models.toml  test_cases.csv  test_openrouter.py  test_openrouter_mock.py
nutrition-fact-labeller/eval-results/: 2026-07-11-minicpm-v-4.6-ocr-only.md  2026-07-11-minicpm-v-4.6-q4_k_m.md  2026-07-11-smolvlm-256m-500m.md  2026-07-12-dedicated-ocr-candidates-full-eval.md  2026-07-12-general-small-vlm-candidates-full-eval.md  README.md
nutrition-fact-labeller/scripts/: backfill_fat_fields.py  fetch-model.sh  review_new_labels.py  run-eval.sh
nutrition-fact-labeller/src/: auth.rs  lib.rs  main.rs  parsing.rs
nutrition-fact-labeller/src/vlm/: llava.rs  mod.rs  openrouter.rs
(+229 files in other folders)
