[package]
name = "llm-nutrition-api"
version = "0.1.0"
edition = "2024"

[dependencies]
dom_smoothie = "0.17"
encoding_rs = "0.8"
env_logger = "0.11"
llama-cpp-2 = "0.1"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server"] }
websearch = "0.1"
