[package]
name = "nutrition-fact-labeller"
version = "0.1.0"
edition = "2024"
default-run = "nutrition-fact-labeller"

[dependencies]
anyhow = "1"
bytes = "1.10.1"
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
encoding_rs = "0.8"
env_logger = "0.11.8"
futures-util = "0.3.31"
image = "0.25.7"
llama-cpp-2 = { version = "0.1.146", features = ["mtmd"] }
log = "0.4.28"
oar-ocr = { version = "0.2.2" }
pretty_assertions = "1.4.1"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_derive = "1.0.219"
serde_json = "1"
strsim = "0.11.1"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.4", features = ["server", "multipart"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
